rendered/envs/alpha/traefik/ingressroute-traefik-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: traefik-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`traefik.ts.zebradil.dev`) || Host(`traefik.junior.ts.zebradil.dev`)
      services:
        - kind: TraefikService
          name: api@internal
